--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "node src/index.js",
+    "start": "node src/index.js",
     "dev": "npx nodemon src/index.js"
   },
   "keywords": [
