--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "nanoid": "^4.0.0",
     "nodemon": "^2.0.16",
     "pg": "^8.7.3",
-    "uuid": "^8.3.2"
+    "url": "^0.11.0",
+    "uuid": "^8.3.2",
+    "valid-url": "^1.0.9"
   }
 }
